# MTE-Robotics-Lab-2

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
robots/leander/atreus/: CMakeLists.txt  README.md  package.xml
robots/leander/atreus/config/: ekf_localization_map.yaml  ekf_localization_odom.yaml  mapviz.launch
robots/leander/atreus/config/move_base/: move_base.yaml
robots/leander/atreus/config/move_base/costmaps/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml
robots/leander/atreus/config/move_base/global_planner/: navfnros_planner.yaml
robots/leander/atreus/config/move_base/local_planner/: dwa_planner.yaml  trajectory_local_planner.yaml
robots/leander/atreus/config/stable/: costmap_common.yaml  planner.yaml
robots/leander/atreus/include/atreus/: gazebo_ros_realsense.h
robots/leander/atreus/launch/: amcl.launch  ar_gazebo_front.launch  ar_gazebo_right.launch  ar_world.launch  copy.launch  depth_proc.launch  empty_world.launch  gmap.launch  irdc_world.launch  maze_world.launch  move_base.launch  move_base_stable.launch  realsense_multiple_urdf.launch  realsense_urdf.launch  rs_vo.launch  rviz.launch  slam.launch  slope_ditch_feasibility.launch  spawn_my_bot.launch  spawn_my_bot_ar.launch  spawn_my_bot_irdc.launch  square_maze.launch  start_ekf_localization.launch  urc_world.launch  xacro_robot.launch
robots/leander/atreus/models/Ramp/: model.sdf
robots/leander/atreus/models/actor_walk/: model.config  model.sdf
robots/leander/atreus/models/crater/: model.config  model.sdf
robots/leander/atreus/rviz/: localize.rviz  pcl.rviz  urdf.rviz
robots/leander/atreus/scripts/: camera_feed.py  key_drive.py  lidar_obs_avoidance.py  ultrasonic_obs_avoidance_90.py  ultrasonic_obs_avoidance_simple.py
robots/leander/atreus/scripts/Alvar Gate Traversal/: README.md  ar_tracking_full_fledged.py  ar_tracking_simple.py  ar_traversal.py
robots/leander/atreus/scripts/Dynamic Traversal with Sonar Obstacle Avoidance/: README.md  taskphase_bot.py
robots/leander/atreus/scripts/Localization/: README.md
robots/leander/atreus/scripts/Obstacle Avoidance using PointCloud/: README.md  pcl_obstacle_avoidance.py
robots/leander/atreus/scripts/Slope and Ditch Detection/: README.md  ultrasonic_object_feasibility.py
robots/leander/atreus/scripts/Teleoperation/: README.md
robots/leander/atreus/scripts/Tennis Ball Detection/: README.md  ball_detection_taskphase.py
robots/leander/atreus/src/: RealSensePlugin.cpp  cloudy.cpp  gazebo_ros_realsense.cpp  mapviz_gps_fix.py  noisy_odom.py
robots/leander/atreus/urdf/: ar_rover.gazebo  rover.gazebo  rover_lidar.gazebo  rover_obj_feasibility.gazebo  rover_research.gazebo
robots/leander/atreus/urdf/xacro_files/: atreus.gazebo  atreus.xacro  macros.xacro
robots/leander/atreus/worlds/: ab1.world  bs.world  curiosity.world  empty.world  final.world  irdc.world  maze.world  proto.world  temp.world  utk.world
(+131 files in other folders)
